--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,7 @@ loaderVersion="[40,)" #mandatory This is typically bumped every Minecraft versio
 
 # The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
-license="GNU GPLv3"
+license="MIT"
 
 # A URL to refer people to when problems occur with this mod
 issueTrackerURL="https://discord.gg/rGwUsy5wdh" #optional
