--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,10 +6,10 @@
 
 modLoader="javafml" #mandatory
 
-loaderVersion="[44,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion="[43,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 
 
-license="GNU GPLv3"
+license="MIT"
 
 
 
@@ -28,8 +28,6 @@ issueTrackerURL="https://discord.gg/rGwUsy5wdh"
 
 
 logoFile="logo.png" #optional
-
-#credits="Thanks for this example mod goes to Java" #optional
 
 authors="MoonFather" #optional
 
@@ -56,7 +54,7 @@ Just check the advancements. Or, just gather a few sticks and flint pieces and f
     # Does this dependency have to exist - if not, ordering below must be specified
     mandatory=true #mandatory
     # The version range of the dependency
-    versionRange="[44,)" #mandatory
+    versionRange="[43,)" #mandatory
     # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT or SERVER
@@ -66,7 +64,7 @@ Just check the advancements. Or, just gather a few sticks and flint pieces and f
     modId="minecraft"
     mandatory=true
 
-    versionRange="[1.19.3,1.20)"
+    versionRange="[1.19.2,1.19.3)"
     ordering="NONE"
     side="BOTH"
 
