--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,9 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle'
 
 
-version = '1.04b'
+version = '1.05'
 group = 'moonfather.woodentoolsremoved' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'woodentoolsremoved'
+archivesBaseName = 'wooden_tools_are_dumb--mc1.18-'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
