--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle'
 
 
-version = '1.05'
+version = '1.06'
 group = 'moonfather.woodentoolsremoved' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'wooden_tools_are_dumb--mc1.18-'
 
@@ -156,6 +156,13 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:catalogue-459701:3803098")
 	runtimeOnly fg.deobf("curse.maven:jade-324717:3865918")
 	runtimeOnly fg.deobf("curse.maven:jei-238222:4351311")
+
+    runtimeOnly fg.deobf("curse.maven:silent-lib-242998:3708359")
+    runtimeOnly fg.deobf("curse.maven:silent-gear-297039:4361861")
+    runtimeOnly fg.deobf("curse.maven:silents-gems-220311:3780216")
+
+    runtimeOnly fg.deobf("curse.maven:treechop-421377:4422017")
+    runtimeOnly fg.deobf("curse.maven:multi-mine-227887:4710274")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
