--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -54,6 +54,7 @@ description='''${mod_description}'''
     ordering="NONE"
     # Side this dependency is applied on - BOTH, CLIENT, or SERVER
     side="BOTH"
+
 # Here's another dependency
 [[dependencies.${mod_id}]]
     modId="minecraft"
@@ -62,3 +63,30 @@ description='''${mod_description}'''
     versionRange="${minecraft_version_range}"
     ordering="NONE"
     side="BOTH"
+
+
+[[dependencies.woodentoolsremoved]]
+    modId="tconstruct"
+    mandatory=false
+    versionRange="[0,]"
+    ordering="AFTER"
+    side="BOTH"
+
+[[dependencies.woodentoolsremoved]]
+    modId="pipez"
+    mandatory=false
+    versionRange="[0,]"
+    ordering="AFTER"
+    side="BOTH"
+
+[[dependencies.woodentoolsremoved]]
+    modId="silentgear"
+    mandatory=false
+    versionRange="[0,]"
+    ordering="AFTER"
+    side="BOTH"
+
+
+[modproperties.woodentoolsremoved]
+    catalogueImageIcon="textures/items/hatchet.png"
+    configuredBackground="minecraft:textures/block/granite.png"
