--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 }
 
 base {
-    archivesName = "{$mod_id}--mc{$minecraft_version}--neoforge-"
+    archivesName = "wooden_tools_are_dumb--mc$minecraft_version--neoforge-"
 }
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
