--- a/gradle.properties
+++ b/gradle.properties
@@ -6,19 +6,17 @@ org.gradle.debug=false
 ## Environment Properties
 
 # The Minecraft version must agree with the Neo version to get a valid artifact
-minecraft_version=1.20.6
+minecraft_version=1.21
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.20.6,1.21)
+minecraft_version_range=[1.21,1.21.1)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=20.6.60-beta
+neo_version=21.0.0-beta
 # The Neo version range can use any version of Neo as bounds or match the loader version range
-neo_version_range=[20.5,)
+neo_version_range=[21.0.0-beta,)
 # The loader version range can only use the major version of Neo/FML as bounds
-loader_version_range=[2,)
-# Pack version - this changes each minecraft release, in general.
-pack_format_number=18
+loader_version_range=[4,)
 
 ## Mod Properties
 
@@ -38,4 +36,4 @@ mod_group_id=moonfather.woodentoolsremoved
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=MoonFather
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Mod changes the way player gathers wood and cobblestone at the very start of the game. \nBecause wooden axes and pickaxes make no sense. \n\nJust check the advancements. Or, just gather a few sticks and flint pieces and follow common sense. \n\nMod has few modes and hard mode is on by default. If you want realistic start but no extra challenge, turn on easy mode in config file.
+mod_description=Mod changes the way player gathers wood and cobblestone at the very start of the game. \nBecause wooden axes and pickaxes make no sense. \n\nJust check the advancements. Or, just gather a few sticks and flint pieces and follow common sense. \n\nMod has few modes and hard mode is on by default. If you want realistic start but no extra challenge, turn on simple mode in config file.
