--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -29,10 +29,10 @@ version="${mod_version}" #mandatory
 displayName="${mod_name}" #mandatory
 
 # A URL to query for updates for this mod. See the JSON update specification https://docs.neoforged.net/docs/misc/updatechecker/
-#updateJSONURL="https://change.me.example.invalid/updates.json" #optional
+updateJSONURL="https://api.modrinth.com/updates/uazDNzUx/forge_updates.json?neoforge=only"
 
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="https://legacy.curseforge.com/minecraft/mc-mods/wooden-tools-are-dumb" #optional
+displayURL="https://modrinth.com/mod/wooden-tools-are-dumb" #optional
 
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="logo.png" #optional
