--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-#org.gradle.jvmargs=
+org.gradle.jvmargs=-Xmx2G
 org.gradle.daemon=false
 org.gradle.debug=false
 
@@ -12,9 +12,9 @@ minecraft_version=1.21
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.21,1.21.1)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.0.0-beta
+neo_version=21.0.84-beta
 # The Neo version range can use any version of Neo as bounds or match the loader version range
-neo_version_range=[21.0.0-beta,)
+neo_version_range=[21.0.84-beta,)
 # The loader version range can only use the major version of Neo/FML as bounds
 loader_version_range=[4,)
 
@@ -28,7 +28,7 @@ mod_name=Wooden tools are dumb
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.06.3
+mod_version=1.06.4
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
