--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle'
 
 
-version = '1.06'
+version = '1.06.2'
 group = 'moonfather.woodentoolsremoved' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'wooden_tools_are_dumb--mc1.18-'
 
@@ -151,7 +151,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.18.2-40.1.0'
+    minecraft 'net.minecraftforge:forge:1.18.2-40.1.30'
 
     runtimeOnly fg.deobf("curse.maven:catalogue-459701:3803098")
 	runtimeOnly fg.deobf("curse.maven:jade-324717:3865918")
@@ -163,6 +163,11 @@ dependencies {
 
     //runtimeOnly fg.deobf("curse.maven:treechop-421377:4422017")
     //runtimeOnly fg.deobf("curse.maven:multi-mine-227887:4710274")
+
+    //runtimeOnly fg.deobf("curse.maven:mantle-74924:5134546")
+    //runtimeOnly fg.deobf("curse.maven:tinkers-construct-74072:4509008")
+    runtimeOnly fg.deobf("curse.maven:tinkers-construct-74072:3998764")
+    runtimeOnly fg.deobf("curse.maven:mantle-74924:4072436")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
