--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -31,7 +31,7 @@ version="${file.jarVersion}" #mandatory
 displayName="Wooden tools are dumb" #mandatory
 
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
-#updateJSONURL="https://change.me.example.invalid/updates.json" #optional
+updateJSONURL="https://api.modrinth.com/updates/uazDNzUx/forge_updates.json" #optional
 
 # A URL for the "homepage" for this mod, displayed in the mod UI
 displayURL="https://www.curseforge.com/minecraft/mc-mods/wooden-tools-are-dumb/pages/how-to-play" #optional
