--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -23,7 +23,7 @@ version="${file.jarVersion}" #mandatory
 
 displayName="Wooden tools are dumb" #mandatory
 displayURL="https://modrinth.com/mod/wooden-tools-are-dumb"
-issueTrackerURL="https://discord.gg/rGwUsy5wdh"
+issueTrackerURL="https://discord.gg/2VayYKktvx"
 
 
 
