--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -86,6 +86,19 @@ description='''${mod_description}'''
     ordering="AFTER"
     side="BOTH"
 
+[[dependencies.woodentoolsremoved]]
+    modId="lexicon"
+    mandatory=false
+    versionRange="[0,]"
+    ordering="AFTER"
+    side="BOTH"
+
+[[dependencies.woodentoolsremoved]]
+    modId="spartanweaponry"
+    mandatory=false
+    versionRange="[0,]"
+    ordering="AFTER"
+    side="BOTH"
 
 [modproperties.woodentoolsremoved]
     catalogueImageIcon="textures/items/hatchet.png"
